# clipboard_history

./: .gitignore  CHANGELOG.md  Cargo.toml  PI_workhistory.md  README.md  TODOs.md
.pi/: pi-guard.json
docs/: homebrew-formula-update.md
docs/course/: _base.html  index.html  main.js  styles.css
docs/course/modules/: 01-intro.html  02-actors.html  03-pipeline.html  04-tricks.html  05-debug.html
macos/: Info.plist
scripts/: build_app_bundle.sh
src/: clipboard.rs  history.rs  main.rs  popup.rs
src/platform/: linux.rs  macos.rs  mod.rs
