[package]
name = "clipboard-history"
version = "0.1.1"
edition = "2021"

[dependencies]
# Cross-platform clipboard access
arboard = "3.4"
# Async runtime for polling
tokio = { version = "1.37", features = ["full"] }
# Serialization for persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI interface
clap = { version = "4.5", features = ["derive"] }
# Home directory
dirs = "5.0"
# Timestamps
chrono = { version = "0.4", features = ["serde"] }
# Global hotkeys
global-hotkey = "0.6"
# Keyboard simulation
enigo = "0.2"
# macOS background app
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication"] }
objc2-foundation = "0.2"
# GUI for popup
eframe = "0.29"
egui = "0.29"
# macOS specific
core-foundation = "0.10"
core-graphics = "0.24"
macos-accessibility-client = "0.0.1"